Changed Input field type

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="card">
                     <label class="label">Card number:</label>
-                    <input type="text" class="input" name="card_number" maxlength="19" placeholder="Card Number" >
+                    <input type="number" class="input" name="card_number" maxlength="19" placeholder="Card Number" >
                     <div class="validation-valid" id="card_number_error"></div>
                 </div>
                 <div class="card-grp">
@@ -33,7 +33,7 @@
                 </div>
                     <div class="card_item" id="cvv">
                         <label class="label">CVC/CVV</label>
-                        <input  type="text" class="input" name="cvc" placeholder="CVC/CVV">
+                        <input  type="number" class="input" name="cvc" placeholder="CVC/CVV">
                         <div class="validation-valid" id="cvc_error"></div>
                     </div>    
                 </div>
