--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,12 @@
             <div class="form">
                 <div class="card">
                     <label class="label">Card holder:</label>
-                    <input type="text" class="input" name="card_holder" placeholder="Name Surname" >
+                    <input type="text" class="input" id="cardHolder"  name="card_holder" placeholder="Name Surname" >
                     <div class="validation-valid" id="card_holder_error"></div>
                 </div>
                 <div class="card">
                     <label class="label">Card number:</label>
-                    <input type="number" class="input" name="card_number" maxlength="19" placeholder="Card Number" >
+                    <input type="number" class="input" id="cardNumber" name="card_number" min="1" maxlength="19" placeholder="Card Number" >
                     <div class="validation-valid" id="card_number_error"></div>
                 </div>
                 <div class="card-grp">
@@ -33,7 +33,7 @@
                 </div>
                     <div class="card_item" id="cvv">
                         <label class="label">CVC/CVV</label>
-                        <input  type="number" class="input" name="cvc" placeholder="CVC/CVV">
+                        <input  type="number" id="cvcNumber" class="input" name="cvc" min="1" placeholder="CVC/CVV">
                         <div class="validation-valid" id="cvc_error"></div>
                     </div>    
                 </div>
